--- a/index.css
+++ b/index.css
@@ -184,8 +184,14 @@ h1, h3 {
 /* For Tablets and iPad  */
 
 @media only screen and (min-width: 670px) and (max-width: 1050px) {
+  .container {
+    margin: 0 10%;
+  }
   nav {
     margin-top: 30px;
+  }
+  nav ul {
+    margin-top: 0;
   }
   .nav-link-button {
     display: none;
@@ -194,21 +200,24 @@ h1, h3 {
     display: block;
   }
   .menu-btn {
-    z-index: 3;
+    z-index: 2;
+    position: fixed;
+    right: 10%;
   }
   #navLinks {
-    position: absolute;
+    position: fixed;
     display: flex;
     flex-direction: column;
     top: 0;
+    right: -250px;
     z-index: 2;
     width: 250px;
     height: 100vh;
     background: #000;
-    transition: 0.7s;
+    transition: all 0.7s;
   }
   #navLinks li {
-    margin-bottom: 30px;
+    margin-top: 30px;
   }
   .menu-btn {
     display: block;
@@ -291,25 +300,30 @@ h1, h3 {
   .nav-link-button {
     display: none;
   }
+  nav ul {
+    margin-top: 0;
+  }
   nav ul li button {
     display: block;
   }
   .menu-btn {
     z-index: 3;
+    position: fixed;
+    right: 10%;
   }
   #navLinks {
-    position: absolute;
+    position: fixed;
     display: flex;
     flex-direction: column;
     top: 0;
     z-index: 2;
-    width: 200px;
+    width: 180px;
     height: 100vh;
     background: #000;
     transition: 0.7s;
   }
   #navLinks li {
-    margin-bottom: 30px;
+    margin-top: 30px;
   }
   .menu-btn {
     display: block;
